<resources>
    <string name="app_name">FoSer</string>

    <!-- Main activity -->
    <string name="info_state"> Service state: </string>
    <string name="info_service_running">Service IS running...</string>
    <string name="info_service_not_running">Service is NOT running...</string>
    <string name="info_states"> Service action: </string>
    <string name="button_start">Start</string>
    <string name="button_restart">Restart</string>
    <string name="button_stop">Stop</string>

    <!-- Foreground service -->
    <string name="ser_title">FoSer!</string>
    <string name="ser_initial_info"> Service is just running...</string>

    <!-- Settings Activity Title -->
    <string name="label_settings">Settings</string>

    <!-- Main menu -->
    <string name="titleSettings">Settings</string>
    <string name="titleExit">Exit</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notification Information</string>
    <string name="sync_header">Synchronization</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Message To Show</string>
    <string name="reply_title">Display When</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Work Periodically</string>
    <string name="attachment_title">Double Speed</string>
    <string name="attachment_summary_on">Double Working Frequency</string>
    <string name="attachment_summary_off">Standard Operating Frequency</string>
</resources>